navbar z-index fix; fonte teste

--- a/my-app/src/assets/css/NavBar.css
+++ b/my-app/src/assets/css/NavBar.css
@@ -15,7 +15,7 @@ nav {
   box-sizing: border-box;
   width: 70vw;
   max-width: 400px;
-  z-index: 1;
+  z-index: 9999;
 }
 
 /********************************
